[package]
name = "rustyboy"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]
description = "Gameboy emulator"

[profile.release]
debug = true

[dependencies]
rustyboy_instruction_derive = { version = "0.1.0", path = "./instruction_derive" }
num_enum = "0.7.0"
sdl2 = "0.35.2"
rodio = { version = "0.17.1", default-features = false }
