[package]
name = "rustyboy_instruction_derive"
version = "0.1.0"
edition = "2021"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]

[lib]
name = "rustyboy_instruction_derive"
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.32", features = ["extra-traits", "full"] }
